--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@
     src: url("/fonts/TrumpSoftPro.ttf");
 }
 
+@font-face {
+    font-family: "Avalon";
+    src: url("/fonts/Avalon.ttf");
+}
+
 /* ------MENU------ */
 .menu-wrap {
     display: flex;
@@ -200,7 +205,7 @@
     cursor: pointer;
 }
 
-/*--------------POPULAR ARTICLES*/
+/*--------------POPULAR ARTICLES--------------*/
 .popular-articles {
     background-color: #f7f8f8;
 }
@@ -249,7 +254,62 @@
   .pop-art-wrapper h4:hover {
       cursor: pointer;
   }
-  
+
+/*-----------LATEST STORIES------------------*/
+.latest-stories {
+    padding: 70px 50px;
+}
+
+.lat-stor-title {
+    font-family: "Avalon";
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.lat-stor-articles {
+    flex-basis: 20%;
+    padding: 10px;
+}
+
+.lat-stor-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 60px;
+}
+
+.lat-stor-description {
+    font-family: "Graphik", sans-serif;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.time-ago {
+    color: #a7aab2;
+    font-family: "Graphik", sans-serif;
+    font-size: 14px;
+    padding-top: 0;
+}
+
+.lat-stor-btn-wrapper {
+    text-align: center;
+    padding-top: 50px;
+}
+
+.lat-stor-btn {
+    padding: 15px 25px;
+    color:#fff;
+    border-style: none;
+    border-radius: 24px;
+    background-color: #00cccc;
+    font-family: "Graphik", sans-serif;
+}
+
+.lat-stor-articles img,
+.lat-stor-description,
+.lat-stor-btn:hover {
+    cursor: pointer;
+}
+
   
 
 
