--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@
 /*--------------POPULAR ARTICLES--------------*/
 .popular-articles {
     background-color: #f7f8f8;
+    padding: 40px;
 }
 
 .pop-title {
@@ -367,6 +368,10 @@
     color: #a7aab2;
 }
 
+.form-btn:hover {
+    cursor: pointer;
+}
+
 .newsletter-social {
     padding: 30px;
 }
@@ -379,6 +384,89 @@
 .social-icon:hover {
     cursor: pointer;
     transform: scale(1.1);
+}
+
+/* --------- REACH YOUR GOALS --------*/
+.reach-goals {
+    padding: 90px 40px 50px 100px;
+}
+.reach-container {
+    display: flex;
+    
+}
+
+.reach-description {
+    flex-basis: 50%;
+}
+
+.reach-section {
+    font-family: "Shentox", sans-serif;
+    font-size: 16px;
+    color: #505666;
+    margin-bottom: 0px;
+}
+
+.reach-title {
+    font-family: "Avalon", sans-serif;
+    font-size: 28px;
+    margin-top: 0px;
+}
+
+.reach-text {
+    font-family: "Graphik", sans-serif;
+    font-size: 18px;
+    font-weight: lighter;
+    color: #505666;
+    line-height: 27px;
+}
+
+.reach-btn {
+    padding: 15px 25px;
+    color:#fff;
+    border-style: none;
+    border-radius: 4px;
+    background-color: #00cccc;
+    font-family: "Graphik", sans-serif;    
+}
+
+.reach-btn:hover {
+    cursor: pointer;
+    background-color: #059c9c;
+}
+
+.reach-images-container {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-left: 4%;
+    margin-top: 4%;
+}
+
+.reach-img {
+    display: flex;
+    align-items: center;
+    flex-basis: 50%;
+}
+
+.reach-img img {
+    width: 112px;
+}
+
+.reach-img h4 {
+    font-family: "Graphik", sans-serif;
+    font-size: 16px;
+    padding-left: 10px;
+}
+
+.reach-partner {
+    display: flex;
+    justify-content: space-around;
+    padding: 40px 10% 50px 5%;
+}
+
+.partner-icon {
+    flex-basis: 12.5%;
+    max-width: 12.5%;
 }
   
 
