--- a/style.css
+++ b/style.css
@@ -59,18 +59,42 @@ html, body {
     color: #505666;
 }
 
+.menu-logo-light {
+    display: none;
+}
+
+.small-menu-btn {
+    display: none;
+}
+
 .menu-logo,
 .menu-list,
+.small-menu-btn,
+.menu-logo-light,
 .menu-icon:hover {
     cursor: pointer;
 }
 
 @media only screen and (max-width: 768px){
+    .menu-wrap {
+        background-color: white;
+        justify-content: flex-start;
+        align-items: center;
+    }
     .menu-container {
         display: none;
     }
     .menu-icon {
         display: none;
+    }
+    .menu-logo {
+        display: none;
+    }
+    .menu-logo-light {
+        display: block;
+    }
+    .small-menu-btn {
+        display: block;
     }
 }
 
@@ -245,13 +269,12 @@ html, body {
 @media only screen and (max-width: 768px) {
     .latest-articles {
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(5, auto);
-        grid-template-areas: "art1"
-                             "art2"
-                             "art3"
-                             "gif"
-                             "advs";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3, auto);
+        grid-template-areas: "art1 art1"
+                             "art2 art3"
+                             "gif gif"
+                             "advs advs";
         grid-gap: 10px;
         padding: 30px 20px;
     }
@@ -261,8 +284,8 @@ html, body {
         padding-right: 2em;
     }
     .art-description-secondary {
-        font-size: 16px;
-        padding-right: 2em;
+        font-size: 14px;
+        padding-right: 1em;
     }
 }
 
@@ -333,7 +356,7 @@ html, body {
 
 /*-----------LATEST STORIES------------------*/
 .latest-stories {
-    padding: 8em 4em;
+    padding: 8em 6em;
 }
 
 .lat-stor-title {
@@ -342,21 +365,27 @@ html, body {
     font-weight: bold;
 }
 
-.lat-stor-articles {
-    flex-basis: 25%;
-    padding: 10px;
-}
-
 .lat-stor-wrapper {
     display: flex;
     flex-wrap: wrap;
     margin-top: 60px;
 }
 
+.lat-stor-articles {
+    flex-basis: 25%;
+    width: 25%;
+    margin-top: 2em;
+}
+
+.lat-stor-articles img {
+    max-width: 90%;
+}
+
 .lat-stor-description {
     font-family: "Graphik", sans-serif;
     font-size: 16px;
-    margin-bottom: 10px;
+    margin-bottom: 0.5em;
+    max-width: 90%;
 }
 
 .time-ago {
@@ -390,9 +419,20 @@ html, body {
         justify-content: center;
     }
 
+    .lat-stor-articles {
+        flex-basis: 50%;
+        text-align: center;
+        justify-self: center;
+    }
+
+    .lat-stor-articles img {
+        width: 100%;
+    }
+
     .lat-stor-title {
         text-align: center;
         font-size: 30px;
+        text-align: center;
     }
     .lat-stor-description {
         font-size: 14px;
