--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ html, body {
     grid-area: art1;
     width: auto;
     height: 25em;
-    background-image: url("/img/art_backgrounds/facebook.jpg");
+    background-image: url("./img/art_backgrounds/facebook.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
@@ -198,7 +198,7 @@ html, body {
     grid-area: art2;
     width: auto;
     height: 15em;
-    background-image: url("/img/art_backgrounds/neural.jpg");
+    background-image: url("./img/art_backgrounds/neural.jpg");
     background-size: 100% 100%;
     position: relative;
 }
@@ -217,7 +217,7 @@ html, body {
     grid-area: art3;
     width: auto;
     height: 15em;
-    background-image: url("/img/art_backgrounds/cowboy.jpg");
+    background-image: url("./img/art_backgrounds/cowboy.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: relative;
@@ -229,7 +229,7 @@ html, body {
     grid-area: advs;
     width: auto;
     height: 12em;
-    background-image: url("/img/art_backgrounds/conference-banner.jpg");
+    background-image: url("./img/art_backgrounds/conference-banner.jpg");
     text-align: center;
     padding-top: 40px;
 }
@@ -251,7 +251,7 @@ html, body {
     display: grid;
     grid-area: gif;
     width: auto;
-    background-image: url("/img/art_backgrounds/nothing-gif.gif");
+    background-image: url("./img/art_backgrounds/nothing-gif.gif");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding-top: 280px;
